--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "averta cy w10";
-	src: url(/Fonts/AvertaCY-Regular.woff2);
+	src: url(./Fonts/AvertaCY-Regular.woff2);
 }
 
 * {
